--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section id="hero-section">
     
     <div class="hero-text-wrapper">
-        <h1 id="main-text">Shisha Lordz</h1>
+        <h1 id="main-text">Shisha <br> Lordz</h1>
         <h2>Lounge & Cafe</h2>
         <h2 id="slogan">The Best Shisha In Brisbane</h2>
     </div>
