--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="venue-text-wrapper">
-        <h1>Come Visit Us</h1>
+        <h1 id="comeVisit">Come Visit Us</h1>
         <h2 id="address">183 Kruger Parade, Redbank Plains</h2>
         <p>Whether your a regular shisha patron or looking to try something different, we can guarantee there is no better place to be than with us </p>
     </div>
