--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <section id="hero-section">
     
     <div class="hero-text-wrapper">
-        <h1 id="main-text">Shisha <br> Lordz</h1>
+        <h1 id="main-text">Shisha Lordz</h1>
         <h2>Lounge & Cafe</h2>
         <h2 id="slogan">The Best Shisha In Brisbane</h2>
     </div>
@@ -21,13 +21,13 @@
     <svg id="arrow" width="30" height="42.5" viewBox="0 0 60 95" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M27.2999 93.2329C28.8643 94.7927 31.3969 94.7891 32.9568 93.2248L58.3762 67.7326C59.9361 66.1683 59.9325 63.6356 58.3681 62.0757C56.8038 60.5159 54.2711 60.5195 52.7113 62.0838L30.1162 84.7436L7.45649 62.1485C5.89216 60.5886 3.35951 60.5923 1.79964 62.1566C0.239781 63.7209 0.243401 66.2536 1.80773 67.8134L27.2999 93.2329ZM25.9957 0.405315L26.1243 90.4061L34.1243 90.3947L33.9957 0.393879L25.9957 0.405315Z" fill="#EF0ACC"/></svg>
         
     <nav>
-        <h3>VENUE</h3>
-        <h3>INFO</h3>
+        <a href="#venueSection"><h3>VENUE</h3></a>
+        <a href="#infoSection"><h3>INFO</h3></a>
     </nav>
 
 </section>
 
-<section id="venue-section">
+<section id="venueSection">
 
     <div id="venue-navbar" class="navbar">
         <h1>V</h1>
@@ -47,7 +47,7 @@
 
 </section>
 
-<section id="info-section">
+<section id="infoSection">
 
     <div id="info-navbar" class="navbar">
         <h1>I</h1>
