--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     </div>
 
     <div class="info-card-wrapper">
-        <div id="opening-hours-card" class="info-card"><h1 id="opening-hours-h1" class="info-active">Opening Hours</h1></div>
-        <div id="entry-cost-card"    class="info-card"><h1 id="entry-cost-h1">Entry Cost</h1></div>
+        <div id="opening-hours-card" class="info-card"><h1 id="opening-hours-h1" class="info-active">Opening <br> Hours</h1></div>
+        <div id="entry-cost-card"    class="info-card"><h1 id="entry-cost-h1">Entry <br> Cost</h1></div>
         <div id="menu-card"          class="info-card"><h1 id="menu-h1">Menu</h1></div>
         <div id="social-card"        class="info-card"><h1 id="social-h1">Social</h1></div>
     </div>
