--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Caveat&family=Codystar&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <title>Shisha Lordz</title>
 </head>
